第二次提交，新增注册功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 #logger
 logging.level.com.zeqinlin.MyCommunity = debug
+
+# MailProperties    password是授权码
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=linzeqin666@sina.com
+spring.mail.password=dde9a8b2d5a1508b
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable = true
+
+# community
+community.path.domain = http://localhost:8080
