--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ logging.level.com.zeqinlin.MyCommunity = debug
 spring.mail.host=smtp.sina.com
 spring.mail.port=465
 spring.mail.username=linzeqin666@sina.com
-spring.mail.password=dde9a8b2d5a1508b
+spring.mail.password=xxxxxx
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable = true
 
