--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,14 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
+
+		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
