--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ logging.level.com.zeqinlin.MyCommunity = debug
 # MailProperties    password是授权码
 spring.mail.host=smtp.sina.com
 spring.mail.port=465
-spring.mail.username=linzeqin666@sina.com
-spring.mail.password=dde9a8b2d5a1508b
+spring.mail.username=xxx@sina.com
+spring.mail.password=xxx
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable = true
 
