--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,10 @@ spring.mail.properties.mail.smtp.ssl.enable = true
 # community
 community.path.domain = http://localhost:8080
 community.path.upload=d:/javaworkspace/data/upload
+
+
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
