--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,14 @@ community.path.upload=d:/javaworkspace/data/upload
 spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=2500
+
+# ElasticsearchProperties
+elasticSearch.url=127.0.0.1:9200
+
+
